--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -39,7 +39,7 @@
           <span class="nav-text">Dashboard</span>
         </div>
       </a>
-      <a mat-list-item routerLink="/students" routerLinkActive="active-link">
+      <a mat-list-item routerLink="/student" routerLinkActive="active-link">
         <div style="display: flex; align-items: center;">
         <mat-icon>people</mat-icon>
         <span class="nav-text">Students</span>
@@ -78,7 +78,7 @@
           
       <!-- //////////  this is home/ dashboard //////////////////////////////////////////////////////////////////////////////////////-->
           <div class="homdash" style="margin-bottom:10px"> 
-            <h1 style="color:grey; display:inline">Dashboard</h1>
+            <h1 style="color:dark-grey; display:inline">Dashboard</h1>
             <div style="padding-top:5px">
               <a style="margin-right:5px"href='./dashboard'>Home</a>
               <span style="margin-right:15px">/ Dashboard</span>
@@ -96,62 +96,94 @@
                         </div>-->
                         
   
-    <div class="card-body">
-      <div class="row align-items-center">
+   
+      <div class="row align-items-center" style="display:flex; justify-content:left ">
         <div class="col mr-2">
-          <div class="text-xs fw-bold text-uppercase text-muted mb-1">
-            Earnings (Monthly)
+          <div class="h4 text-xs fw-bold text-uppercase text-muted mb-2" style="font-weight:450; font-size:12px">
+            Assesments
           </div>
-          <div class="h5 mb-0 fw-bold text-gray-800">$40,000</div>
-          <div class="mt-2 mb-0 text-muted text-xs">
+          <div class="h4 mb-0 fw-bold text-gray-800">500</div>
+          <div class="mt-1 mb-0 text-muted text-xs">
             <span class="text-success me-2">
               <i class="fa fa-arrow-up"></i> 3.48%
             </span>
             <span>Since last month</span>
           </div>
         </div>
-        <div class="col-auto">
-          <i class="fa fa-calendar fa-2x text-primary"></i>
+        <div class="col-auto" style="color:grey">
+         <mat-icon style="color:rgb(136, 47, 136); margin-right:10px; font-size:40px; width:50px; height:50px; line-height:45px">quiz</mat-icon>
         </div>
       </div>
-    </div>
+ 
  
 
 
                       </div>                                                                    
                                                                                   
                       <div class="card">                                                              
-                        <div class="crdcont">                                                              
-                          <div style="color:black">Courses</div>  
-                          <i class="fas fa-arrow-up " style="color:green"></i>                                                            
-                        </div>                                                              
-                        <div class="crdicon">                                                              
-                                                                                      
-                        </div>                                                              
+                        <div class="row align-items-center" style="display:flex; justify-content:left ">
+        <div class="col mr-2">
+          <div class="h4 text-xs fw-bold text-uppercase text-muted mb-2" style="font-weight:450; font-size:12px">
+            Enrolls
+          </div>
+          <div class="h4 mb-0 fw-bold text-gray-800">7000</div>
+          <div class="mt-1 mb-0 text-muted text-xs">
+            <span class="text-success me-2">
+              <i class="fa fa-arrow-up"></i> 8.48%
+            </span>
+            <span>Since last month</span>
+          </div>
+        </div>
+        <div class="col-auto" style="color:grey">
+          <mat-icon style="color:rgb(83, 180, 83); font-size:40px; width:50px; height:50px; line-height:45px">how_to_reg</mat-icon>
+        </div>
+      </div>                                                           
                       </div>                                                              
                                                                                   
                       <div class="card">                                                              
-                        <div class="crdcont">                                                              
-                          <div style="color:black">Student guide</div>                                                              
-                        </div>                                                              
-                        <div class="crdicon">                                                              
-                                                                                      
-                        </div>                                                              
+                        <div class="row align-items-center" style="display:flex; justify-content:left ">
+        <div class="col mr-2">
+          <div class="h4 text-xs fw-bold text-uppercase text-muted mb-2" style="font-weight:450; font-size:12px">
+            Courses
+          </div>
+          <div class="h4 mb-0 fw-bold text-gray-800">45</div>
+          <div class="mt-1 mb-0 text-muted text-xs">
+            <span class="text-success me-2">
+              <i class="fa fa-arrow-up"></i> 6.48%
+            </span>
+            <span>Since last month</span>
+          </div>
+        </div>
+        <div class="col-auto" style="color:grey">
+          <mat-icon style="color:rgb(66, 66, 238); margin-right:10px; font-size:40px; width:50px; height:50px; line-height:45px">book_ribbon</mat-icon>
+        </div>
+      </div>                                                             
                       </div>                                                               
                                                                                   
                                                                                   
                       <div class="card">                                                              
-                        <div class="crdcont">                                                              
-                          <div style="color:black">Exams</div>                                                              
-                        </div>                                                              
-                        <div class="crdicon">                                                              
-                                                                                      
-                        </div>                                                              
+                        <div class="row align-items-center" style="display:flex; justify-content:left ">
+        <div class="col mr-2">
+          <div class="h4 text-xs fw-bold text-uppercase text-muted mb-2" style="font-weight:450; font-size:12px">
+            Assesments
+          </div>
+          <div class="h4 mb-0 fw-bold text-gray-800">500</div>
+          <div class="mt-1 mb-0 text-muted text-xs">
+            <span class="text-success me-2">
+              <i class="fa fa-arrow-up"></i> 3.48%
+            </span>
+            <span>Since last month</span>
+          </div>
+        </div>
+        <div class="col-auto" style="color:grey">
+          <mat-icon style="color:orange; margin-right:10px; font-size:40px; width:50px; height:50px; line-height:45px">quiz</mat-icon>  
+        </div>
+      </div>                                                            
                       </div>                                                              
                                                                         
           </div>
 
-          <div style="display:flex; margin-top:40px; margin-right:50px; justify-content:space-between">
+      <div style="display:flex; margin-top:40px; margin-right:50px; ">
 
           <!-- /////// thi is table ////////////////////////////////////////////////////////////////////////////////////////////// -->
           <span class="table"style=" border:none ;">
@@ -195,7 +227,8 @@
               
                product sold csrd///////////////////////////////////////////////////////////////////////////////////////////////////
                <div> -->
-                <div class="products-sold-card">
+                <span style="display:flex; margin-left:50px">
+                  <span class="products-sold-card" >
                       <div class="card-header">
                         <span>Products Sold</span>
                         <select class="filter-dropdown">
@@ -246,8 +279,8 @@
                       </div>
                     
                       <div class="view-more">View More →</div>
-                </div>
-
+                  </span>
+                </span>
                 <!-- //////////////////////////////////////////////////////////////////////////////////////////////////<mat-form-field class="small-select" style="overflow:hidden; z-zindex:+1">
                   <mat-label>Favorite food</mat-label>
                   <mat-select>
@@ -282,7 +315,7 @@
 
               
           
-        </div>  
+      </div>  
 
     </div>
     
