--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,35 @@
-
-<div class="login-container" [style.backgroundImage]="">
+<div class="login-container" [style.backgroundImage]="'url(assets/login-bg.jpg)'">
   <h2>Login</h2>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div>
       <label>Email:</label>
-      <input class="inp" formControlName="email" placeholder="Enter your email" />
+      <input 
+        class="inp" 
+        formControlName="email" 
+        placeholder="Enter your email" 
+      />
+      <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" class="error">
+        <div *ngIf="loginForm.get('email')?.errors?.['required']">Email is required</div>
+        <div *ngIf="loginForm.get('email')?.errors?.['email']">Invalid email format</div>
+      </div>
     </div>
     <div>
       <label>Password:</label>
       <label class="forget">forget?</label>
-      <input class="inp" formControlName="password" type="password" placeholder="Enter password" />
+      <input 
+        class="inp" 
+        formControlName="password" 
+        type="password" 
+        placeholder="Enter password" 
+      />
+      <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="error">
+        <div *ngIf="loginForm.get('password')?.errors?.['required']">Password is required</div>
+        <div *ngIf="loginForm.get('password')?.errors?.['minlength']">
+          Password must be at least 6 characters
+        </div>
+      </div>
     </div>
-    <button type="submit">Login</button>
+    <button type="submit" [disabled]="loginForm.invalid">Login</button>
   </form>
   <p>don't have an account? <span class="logsign" (click)="login()">signup</span></p>
 </div>
