--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -14,12 +14,13 @@
     outline: none;
     font-size: 15px;
     width: 200px; // Adjust width as needed
+    height:40px;
     background-color: rgb(255, 255, 255); // Slightly transparent background
     color: rgba(12, 11, 11, 0.877);
     caret-color: #61dafb; // Cursor color
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2); // Inner shadow
     transition: width 0.3s ease; // Smooth width transition on focus
-     border:1px solid black;
+     border:1px solid rgb(128, 128, 128);
 }
 
 #headerSearchInput::placeholder {
@@ -29,7 +30,7 @@
 #headerSearchInput:focus {
     width: 250px; // Expand slightly on focus
     background-color: rgb(255, 255, 255);
-     border:1px solid black;
+     border:1px solid rgb(128, 128, 128);
 }
 
 #headerSearchButton {
