--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -8,5 +8,5 @@
         (keyup.enter)="onSearch()"
     >
     <button id="headerSearchButton" (click)="onSearch()">
-        <i class="fas fa-search"></i> </button>
+        <i class="fas fa-search" style="color:rgb(41, 41, 175)ary"></i> </button>
 </div>
