--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,7 +4,7 @@
   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
     <div>
       <label>Username:</label>
-      <input class="inp" formControlName="user" placeholder="Enter username" />
+      <input class="inp" formControlName="name" placeholder="Enter username" />
     </div>
     <div>
       <label>Email:</label>
