--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,8 +9,8 @@
         placeholder="Enter your email" 
       />
       <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" class="error">
-        <div *ngIf="loginForm.get('email')?.errors?.['required']">Email is required</div>
-        <div *ngIf="loginForm.get('email')?.errors?.['email']">Invalid email format</div>
+        <div *ngIf="loginForm.get('email')?.errors?.['required']" class="error" >Email is required</div>
+        <div *ngIf="loginForm.get('email')?.errors?.['email']" class="error" >Invalid email format</div>
       </div>
     </div>
     <div>
@@ -23,8 +23,8 @@
         placeholder="Enter password" 
       />
       <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="error">
-        <div *ngIf="loginForm.get('password')?.errors?.['required']">Password is required</div>
-        <div *ngIf="loginForm.get('password')?.errors?.['minlength']">
+        <div *ngIf="loginForm.get('password')?.errors?.['required']" class="error">Password is required</div>
+        <div *ngIf="loginForm.get('password')?.errors?.['minlength']" class="error">
           Password must be at least 6 characters
         </div>
       </div>
