--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -186,37 +186,37 @@
       <div style="display:flex; margin-top:40px; margin-right:50px; ">
 
           <!-- /////// thi is table ////////////////////////////////////////////////////////////////////////////////////////////// -->
-          <span class="table"style=" border:none ;">
-          <table mat-table [dataSource]="dataSource" style="border:1px solid grey ">
+          <span class="table"style=" border:none ; max-height: 500px; overflow-y: auto">
+          <table mat-table [dataSource]="dataSource" style="border:1px solid grey; ">
 
                     <!--- Note that these columns can be defined in any order.
-                          The actual rendered columns are set as a property on the row definition" -->primary
+                          The actual rendered columns are set as a property on the row definition" -->
 
-                    <!-- Position Column -->
-                    <ng-container matColumnDef="position">
-                      <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> No. </th>
-                      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                    <!-- id Column -->
+                    <ng-container matColumnDef="id" style="position:sticky; top:0">
+                      <th mat-header-cell *matHeaderCellDef sticky style="background-color: #3f51b5; color: white;"> Id </th>
+                      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
                     </ng-container>
                   
                     <!-- Name Column -->
                     <ng-container matColumnDef="name">
-                      <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> Name </th>
+                      <th mat-header-cell *matHeaderCellDef sticky style="background-color: #3f51b5; color: white;"> Name </th>
                       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                     </ng-container>
                   
-                    <!-- Weight Column -->
-                    <ng-container matColumnDef="weight">
-                      <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> Weight </th>
-                      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                    <!-- age Column -->
+                    <ng-container matColumnDef="age">
+                      <th mat-header-cell *matHeaderCellDef sticky style="background-color: #3f51b5; color: white;"> Age </th>
+                      <td mat-cell *matCellDef="let element"> {{element.age}} </td>
                     </ng-container>
                   
-                    <!-- Symbol Column -->
-                    <ng-container matColumnDef="symbol">
-                      <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> Symbol </th>
-                      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                    <!-- grade Column -->
+                    <ng-container matColumnDef="grade">
+                      <th mat-header-cell *matHeaderCellDef sticky style="background-color: #3f51b5; color: white;"> Grade </th>
+                      <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
                     </ng-container>
                   
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns" sticky></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
           </span>
@@ -289,35 +289,13 @@
                     </mat-option>
                   </mat-select>
                 </mat-form-field> -->
-                <!--                 
-                <form action="/action_page.php">
-            
-                  <select name="cars" id="cars" style="background-color:#3f51b5; color:white; border:1px solid black">
-                  
-                    <option value="volvo">Month</option>
-                    <option value="saab">January</option>
-                    <option value="opel">February</option>
-                    <option value="audi">March</option>
-                    <option value="audi">April</option>
-                    <option value="audi">May</option>
-                    <option value="audi">June</option>
-                    <option value="audi">July</option>
-                    <option value="audi">July</option>
-                    <option value="audi">August</option>
-                    <option value="audi">September</option>
-                    <option value="audi">October</option>
-                    <option value="audi">November</option>
-                    <option value="audi">December</option>
-                  </select>
-                  <br><br>
-                  
-                </form> -->
-
+                
               
           
       </div>  
-
+      <button class="add-student" mat-raised-button color="primary" (click)="openAddStudentDialog()">Add Student</button>
     </div>
     
+
   </mat-drawer-content>
 </mat-drawer-container>
