--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -82,21 +82,34 @@ mat-icon {
 //   margin:5%;
 // }
 
-.cnt{
-  background-color:lightblue;
-  height:infinite;
-  position:absolute;
-  display:grid;
-  width:100%;
-  margin:0px;
-  margin-right:0px; 
-  padding-left:25px;
-  padding-top:25px;
-  overflow:hidden;
-  padding-bottom:50px;
+// .cnt{
+//   background-color:lightblue;
+//   height:infinite;
+//   position:absolute;
+//   display:grid;
+//   width:100%;
+//   margin:0px;
+//   margin-right:0px; 
+//   padding-left:25px;
+//   padding-top:25px;
+//   overflow:hidden;
+//   padding-bottom:50px;
 
 
+// }
+.cnt {
+  background-color: lightblue;
+  min-height: 100vh; /* Infinite height isn't valid. This sets it to fill the screen */
+  position: relative;
+  display: grid;
+  width: 100%;
+  margin: 0;
+  padding: 25px;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
+
+
 
 .flex-cad{
   
@@ -222,3 +235,20 @@ mat-icon {
 
 
 
+
+
+
+
+
+
+.custom-dialog-container {
+  border-radius: 50px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  box-shadow: 0px 6px 24px rgba(0, 0, 0, 0.2);
+}
+
+.add-student{
+  width:200px;
+  align-items:right;
+}
