--- a/src/app/staff/staff.component.html
+++ b/src/app/staff/staff.component.html
@@ -1,4 +1,16 @@
 <mat-drawer-container class="example-container">
+
+
+          <div class="homdash" style="margin-bottom:10px"> 
+            <h1 style="color:dark-grey; display:inline">Staff</h1>
+            <div style="padding-top:5px">
+              <a style="margin-right:5px"href='./dashboard'>Home</a>
+              <span style="margin-right:15px">/ Staff</span>
+            </div>
+          </div>
+        
+
+
 <mat-drawer #drawer class="sid" mode="side" opened>
       <mat-toolbar color="primary">
         <mat-icon fontIcon="school"></mat-icon>
@@ -44,7 +56,53 @@
   <mat-drawer-content style="background-color:lightgreen">
 
     <app-header> </app-header>
+    
+          <!-- //////////  this is home/ dashboard //////////////////////////////////////////////////////////////////////////////////////-->
+          <div class="homdash" style="margin-bottom:10px"> 
+            <h1 style="color:dark-grey; display:inline">Staff</h1>
+            <div style="padding-top:5px">
+              <a style="margin-right:5px"href='./dashboard'>Home</a>
+              <span style="margin-right:15px">/ Staff</span>
+            </div>
+          </div>
+        <div class="table">
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="id">
+    <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> No. </th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="grade">
+    <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> Standard </th>
+    <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="subject">
+    <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> Subject </th>
+    <td mat-cell *matCellDef="let element"> {{element.subject}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+
+        </div>
+    
   </mat-drawer-content>
 <mat-drawer-container>
-<p>student works!</p>
+
 
